src/objects/Pricing_Structure__c.object
<CustomObject>
    <fields>
        <fullName>Estimated_At_Risk_PPPM__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated At-Risk PPPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Partner_Admin_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Estimated Partner Admin Fees</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMPM__c</fullName>
        <description>JENGA-1357</description>
        <inlineHelpText>Only used for BH 2.0 product</inlineHelpText>
        <label>PMPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>Price_Book_Entry_Variations_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Stipulations__c</fullName>
        <label>Pricing Stipulations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Price_Book_Entry_Variations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Up_Front_Per_Member__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Up Front Per Member</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pricing Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price_Book__c</columns>
        <columns>Program__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pricing Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>